# COD

./: README.md
.qi/: qibuild.xml  worktree.xml
TestImages9/: 2-2-headpitch-02  2-4-headpitch-02  2-5-headpitch-02  2-6-headpitch-02  2-8-headpitch-02  2-goal-headpitch-02  3-1-headpitch-01  3-2-headpitch  3-2-headpitch-05  3-5-headpitch-01  3-6-headpitch-02  3-8-headpitch-05  3-goal-headpitch-01  4-1-headpitch-01  4-2-headpitch-01  4-5-headpitch-01  4-6-headpitch-05  4-8-headpitch-04  4-goal-headpitch-01  6-1-headpitch-05  6-2-headpitch-02  6-3-headpitch-02  6-4-headpitch-02  6-5-headpitch-02  6-6-headpitch-02  6-7-headpitch-02  6-8-headpitch-02  6-goal-headpitch-02
src/: .FindBall.cpp.swp  .FindBall.h.swp  .Movement.cpp.swp  .Movement.h.swp  Camerastuff.cpp  Camerastuff.h  FindBall.cpp  FindBall.h  Misc.h  Movement.cpp  Movement.h
src_depr/: .ColorIndependentBallPerceptor.cpp.swp  .ColorIndependentBallPerceptor.h.swp  .Kappa.cpp.swp  ColorIndependentBallPerceptor  ColorIndependentBallPerceptor.cpp  ColorIndependentBallPerceptor.h  Kappa  (+9 more)
streetSoccerModule/: .CMakeLists.txt.un~  .Camerastuff.cpp.un~  .Camerastuff.h.un~  .FindBall.cpp.un~  .FindBall.h.un~  .Misc.h.un~  .Movement.cpp.un~  .Movement.h.un~  .main.cpp.un~  .streetSoccerModule.h.un~  CMakeLists.txt  Camerastuff.cpp  Camerastuff.h  Controlflow.cpp  FindBall  FindBall.cpp  FindBall.h  FindGoal.cpp  FindGoal.h  Misc.h  Movement.cpp  Movement.h  main.cpp  qiproject.xml
streetSoccerModule/build-naoqi-sdk/: CMakeCache.txt  CMakeCache.txt~
streetSoccerModule/build-sys-linux-x86_64/: CMakeCache.txt
